--- a/Course Material.Rmd
+++ b/Course Material.Rmd
@@ -124,3 +124,340 @@ cbind(x, y)
 rbind(x, y)
 ```
 
+## Factors
+
+Factors are used to represent categorical data. One can thinkof a factor as an integer vector where each integer has a label. Using factors with labels is better than using integers because factors are self-describing: having a variable that has values "Male" and "Female" is better than a variable that has values 1 and 2
+
+Here how to use a factor:
+```{r}
+x <- factor(c("yes", "yes", "no", "yes", "no"))
+x
+```
+```{r}
+table(x)
+```
+```{r}
+unclass(x)
+```
+
+The order of the levels can be set using the levels argument to factor(). This can be important in linear modelling because the first level is used as the baseline level.
+
+```{r}
+x <- factor(c("yes", "yes", "no", "yes", "no"), 
+            levels = c("yes", "no"))
+x
+```
+
+Normal the level is chosen by alphabetical order, so in this case "no" would be the first level and "yes" the second level.
+
+## Missing values
+
+Missing values are denoted by NA or NaN for undefined mathematical operation:
+
+- is.na() is used to test objects if they are NA
+- is.nan() is used to test for NaN
+- NA values have a class also, so there are integer NA, character NA, etc.
+- A NaN value is also NA but the converse is not true
+
+```{r}
+x <- c(1, 2, NA, 10, 3)
+is.na(x)
+```
+```{r}
+is.nan(x)
+```
+```{r}
+x <- c(1, 2, NaN, NA, 4)
+is.na(x)
+is.nan(x)
+```
+
+## Data Frames
+
+Data frames are used to store tabular data
+
+- they are represented as a special type of list where every element of the list has to have the same length
+- each element of the list can be thought of as a column and the length of each element of the list is the number of rows
+-  unlike matrices, data frames can store different classes of objects in each column (just like lists): matrices must have every element be the same class
+- data frames also have a special attribute called row.names (for example ID from a patient)
+- data frames are usually created by calling read.table() or read.csv()
+- can be converted to a matrix by calling data.matrix()
+
+```{r}
+x <- data.frame(foo = 1:4, bar = c(T, T, F, F))
+x
+nrow(x)
+ncol(x)
+```
+
+## Reading Data
+
+There are a few principal functions reading data into R
+
+- read.table, read.csv, for reading tabular data
+- readLines, for reading lines of a text file
+- source, for reading in R code files (inverse of dump)
+- dget, for reading in R code files (inverse of dput)
+- load, for reading in saved workspaces
+- unserialize, for reading single R objects in binary form
+
+the relative functions for writing data are:
+
+- write.table
+- writeLines
+- dump
+- dput
+- save
+- serialize
+
+### Reading Data Files with read.table
+
+The most important arguments are:
+
+- file, the name of a file or a connection
+- header, logical indicating if the file has a header line
+sep, a string indicating how the columns are separated
+- colClasses, a character vector indicating the class of each column in the dataset
+- nrows, the number of rows in the dataset
+- comment.char, a character string indicating the comment character
+- skip, the number of lines to skip from the beginning
+- stringsAsFactors, should character variables be coded as factors?
+
+example:
+
+data <- read.table("foo.txt")
+
+read.csv is identical to read.table except that the default separator is a comma
+
+## Reading in Larger Datasets with read.table
+
+Tips:
+
+- Read the help page for read.table and memorize some hints
+- make a rough calculation of the memory required to store your dataset. If the dataset is larger than the amount of RAM on your computer, you can probably stop right here
+- set comment.char = "" if there are no commented lines in your file
+- Use the cloClasses argument it can make read.table run much faster
+- set nrows. This doesn't make R run faster but it helps with memory usage. A mild overestimate is okay. You can use the Unix tool wc to calculate the number of lines in a file
+
+It's useful to know some information:
+
+- How much memory is available?
+- What other applications are in use?
+- Are there other users logged into the same system?
+- What operating system?
+- Is the OS 32 or 64 bit?
+
+### Calculating Memory Requirements
+
+I have a data frame with 1,500,000 rows and 120 columns, all of which are numeric data. Roughly, how much memory is required to store this data frame?
+
+1,500,000 x 120 X 8 bytes/numeric
+= 1440000000 bytes
+= 1440000000 / 2^20 bytes/MB
+= 1,373.29 MB
+= 1.34 GB
+
+## Textual Formats
+
+They contain more data then a table:
+- dumping and dputing are useful because the resulting textual format is edit-able, and in the case of corruption, potentially recoverable
+- unlike writing out a table or csv file, dump and dput preserve the *metadata*, so that another user doesn't have to specify it all over again
+- Textual formats can work much better with version control
+- Can be longer-lived
+- Often need to be compressed
+
+## Interfaces to the Outside WOrld
+
+- file, opens a connection to a file
+- gzfile, opens connection to a compressed file
+- bzfine, opens a connection to a file compressed with bzip2
+- url, opens a connection to a webpage
+- readLines can be useful for reading in lines of webpages
+
+## Subsetting R Objects: Basics
+
+- [always returns an object of the same class as the original; can be used to select more than one element (there is one exception)
+- [[ is used to extract elements of a list or a data frame; it can only be used to extract a single element and the class of the returned object will not necessarily be a list or a data frame
+- $ is used to extract elements of a list or data frame by name; semantics are similar to hat of [[
+
+```{r}
+x <- c("a", "b", "c", "c", "d", "a")
+x[1]
+x[2]
+x[1:4]
+```
+```{r}
+x[x > "a"]
+```
+```{r}
+u <- x > "a"
+u
+x[u]
+```
+
+## Subsetting Lists
+
+```{r}
+x <- list(foo = 1:4, bar = 0.6)
+x[1]
+```
+```{r}
+x[[1]]
+```
+```{r}
+x$bar
+```
+```{r}
+x[["bar"]]
+```
+```{r}
+x["bar"]
+```
+
+If you want to extract multiple things from a list you shoudl use a single brackt operator:
+
+```{r}
+x <- list(foo = 1:4, bar = 0.6, baz = "hello")
+x[c(1, 3)]
+```
+
+You can use the double bracket operator to index a list, while $ can only be used with literal names
+
+```{r}
+name <- "foo"
+x [[name]] ## computed index for 'foo'
+```
+```{r}
+x$name  ## element 'name' doesn't exist
+```
+```{r}
+x$foo   ## element 'foo' does exist
+```
+
+The [[ can take an integer sequence
+
+```{r}
+x <- list(a = list(10, 12, 14), b = c(3.14, 2.81))
+x[[c(1, 3)]]
+x[[1]][[3]]
+x[[c(2, 1)]]
+```
+
+## Subsetting Matrices
+
+Matrices can be subsetted in the usual way with (*i,j*) type indices.
+
+```{r}
+x <- matrix(1:6, 2, 3)
+x
+x[1, 2]
+x[2, 1]
+```
+
+Indices can also be missing
+
+```{r}
+x[1, ]
+x[,2]
+```
+
+By default when a single element of a matrix is retrieved, it is returned as a vector of length 1 rather than a 1x1 matrix. This behavior can be turned off by setting drop = FALSE.
+
+```{r}
+x <- matrix(1:6, 2, 3)
+x[1, 2]
+```
+```{r}
+x[1, 2, drop = FALSE]
+```
+
+Similarly, subsetting a single column or a single row will give you a vector, not a matrix
+
+```{r}
+x <- matrix(1:6, 2, 3)
+x[1, ]
+```
+```{r}
+x[1, , drop = FALSE]
+```
+
+## Subsetting Partial Matching
+
+Partial matching of names is allowed with [[ and $
+
+```{r}
+x <- list(aardvark = 1:5)
+x$a
+```
+```{r}
+x[["a"]]
+```
+```{r}
+x[["a", exact = FALSE]]
+```
+
+## Removing NA Values
+
+```{r}
+x <- c(1, 2, NA, 4, NA, 5)
+bad <- is.na(x)
+bad
+x[!bad]
+```
+
+The '!' tells to print the others value without the values contained in the bad vector.
+
+What if there are multiple things and you want to take the subset with no missing values?
+
+```{r}
+x <- c(1, 2, NA, 4, NA, 5)
+y <- c("a", "b", NA, "d", NA, "f")
+good <- complete.cases(x, y)
+good
+```
+```{r}
+x[good]
+y[good]
+```
+
+## Vectorized operations
+
+Many operations in R are *vectorized* making code more efficient, concise, and easier to read
+
+```{r}
+x <- 1:4; y <- 6:9
+x + y
+```
+```{r}
+x > 2
+```
+```{r}
+x >= 2
+```
+```{r}
+y == 8
+```
+```{r}
+x * y
+```
+```{r}
+x / y
+```
+
+## Vectorized matrix operations
+
+```{r}
+x <- matrix(1:4, 2, 2); y <- matrix(rep(10, 4), 2, 2)
+x
+y
+```
+```{r}
+x * y    ## element-wise multiplication
+```
+```{r}
+x / y
+```
+```{r}
+x %*% y    ## true matrix multiplication
+```
+
